# wgpu_compute

./: Cargo.toml  テストスコア.txt
src/: main.rs  shader.wgsl
