[package]
name = "wgpu_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15"
pollster = "0.2"
env_logger = "0.9"
bytemuck = { version = "1.4", features = ["derive"] }
futures-intrusive = "0.5.0"

#for benchmark
rayon = "1.5.3"
rand = "0.8.5"